--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-
+        <script src="https://kit.fontawesome.com/b21efc980b.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
 
         <title>Santiago Soto Montenegro</title>
@@ -63,6 +63,7 @@
             <section class="startups">
                 <div class="container">
                     <div class="text align-items-center col-sm-8">
+                        <h3 class="title-proyect">Proyectos</h3> 
                         <div class="inside-container accordion" id="accordionExample">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingOne">
@@ -181,7 +182,11 @@
                                 <span class="visually-hidden">Next</span>
                             </button>
                         </div> 
-                    </div>
+                    </div>                    
+                </div>
+                <div class="external-links" >
+                    <a href="https://www.linkedin.com/in/sansotmon"  <i class="fa fa-2x fa-linkedin-square"></i></a>
+                    <a href="https://www.github.com/sansotmon" <i class="fa-2x fab fa-github-square"></i></a>
                 </div>
             </section>
         </div>
