added multi languaje javascript functions

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="es">
+<html lang="en">
     <head>
         <link rel="icon" href="./images/favicon.png" type="image/png"> 
         <!-- Required meta tags -->
@@ -14,6 +14,8 @@
         <title>Santiago Soto Montenegro</title>
     </head>
     <body>
+        <a href="#" onclick="setLanguage('en')">English</a>
+        <a href="#" onclick="setLanguage('es')">Spanish</a>
         <div class="blue-line"></div>
         <div class="blue-rectangle"></div>
         <div class="parent-container">
@@ -31,6 +33,7 @@
                     </div>
                 </div>
             </header>
+            <div id="div1"></div>
             <section class="description">
                 <div class="container d-md-flex article">
                     <div class="photo-left col-sm-4">
@@ -196,6 +199,7 @@
             </footer>
         </div>
     </body>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
 </html>
