added intro and start us traduction

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                     </div>
                 </div>
             </header>
-            <div id="div1"></div>
             <section class="description">
                 <div class="container d-md-flex article">
                     <div class="photo-left col-sm-4">
@@ -43,12 +42,8 @@
                     </div>
                     <div class="article-center col-sm-8">
                         <article>
-                            <p>Soy Santiago, apasionado por la tecnología y el pensamiento humano, creo que el equilibrio emocional y racional es parte fundamental
-                                para entender la sociedad y construir futuro, creo que la tecnología es esencial reduciendo la brecha social mundial 
-                                y brinda las herramientas necesarias para un sólido crecimiento económico.</p>
-                            <p>Creo que el ser humano es íntegro cuando puede y sabe compartir su conocimiento y experiencias para construir grandes 
-                                ideas. Pienso que el éxito se construye en conjunto y siempre es importante empezar nosotros ¿o quien más lo hará?,
-                                creo que ser propositivo, inquieto y disciplinado es clave para alejarnos de la ignorancia y acercarnos al conocimiento.</p>
+                            <p class="js-intro"></p>
+                            <p class="js-start-us"></p>
                             <p>Las soluciones de software cambian el mundo y conectan mercados de formas imposibles de imaginar, 
                                 el valor de desarrollar software es soñar en grandes ideas mientras las materializas en líneas de código.</p>
                             <p>He participado en construcción de startups desde cero desarrollando estrategias de negocio y construyendo equipos sólidos. 
