added software solutions translation

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
                         <article>
                             <p class="js-intro"></p>
                             <p class="js-start-us"></p>
-                            <p>Las soluciones de software cambian el mundo y conectan mercados de formas imposibles de imaginar, 
-                                el valor de desarrollar software es soñar en grandes ideas mientras las materializas en líneas de código.</p>
+                            <p class="js-software"></p>
                             <p>He participado en construcción de startups desde cero desarrollando estrategias de negocio y construyendo equipos sólidos. 
                                 Para liderar primero debes operar y creo que un gran líder es aquel que no acepta el hecho de serlo.</p>
                             <p>Mi motivación es compartir experiencias, materializar proyectos y generar valor en todas las personas a mi alrededor.</p>
