--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                             <p class="js-intro"></p>
                             <p class="js-start-us"></p>
                             <p class="js-software"></p>
-                            <p>He participado en construcción de startups desde cero desarrollando estrategias de negocio y construyendo equipos sólidos. 
-                                Para liderar primero debes operar y creo que un gran líder es aquel que no acepta el hecho de serlo.</p>
+                            <p class="js-startups"></p>
                             <p>Mi motivación es compartir experiencias, materializar proyectos y generar valor en todas las personas a mi alrededor.</p>
                         </article>
                     </div>
