--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <title>Santiago Soto Montenegro</title>
     </head>
     <body>
-        <a href="#" onclick="setLanguage('en')">English</a>
-        <a href="#" onclick="setLanguage('es')">Spanish</a>
+        <a class="js-english" href="#" onclick="setLanguage('en')">English</a>
+        <a class="js-spanish" href="#" onclick="setLanguage('es')">Spanish</a>
         <div class="blue-line"></div>
         <div class="blue-rectangle"></div>
         <div class="parent-container">
@@ -42,11 +42,17 @@
                     </div>
                     <div class="article-center col-sm-8">
                         <article>
-                            <p class="js-intro"></p>
-                            <p class="js-start-us"></p>
-                            <p class="js-software"></p>
-                            <p class="js-startups"></p>
-                            <p class="js-motivation"></p>
+                            <p class="js-intro">I'm Santiago, tech and human thought appassionate, I believe that rational and emotional
+                                balance is fundamental part for understand society and build country. I believe that tech is escencial 
+                                to reduce big mundial social gap and allows a major economics growth.</p>
+                            <p class="js-start-us">I believe that the human is integral when know to share their knowledge and experiences to build big ideas. 
+                                I think so success is build by us and always is important begin or ¿Who will do it?, I believe that be propositive, 
+                                restless and disciplined is the key to let ignorance and gain knowledge.</p>
+                            <p class="js-software">The software solutions changed world and connects markets of unimaginable ways, the value of software development 
+                                is dream with big ideas while your materialize them to code lines.</p>
+                            <p class="js-startups">I have participated to startups building since zero developmenting bussiness strategies and building good teams. 
+                                I work to be expendable, I shared tools and my team will go further than I imagine.</p>
+                            <p class="js-motivation">My motivation is share experiences, materialize proyects and generate value to all around people to me.</p>
                         </article>
                     </div>
                     <div class="photo-right col-sm-4">
@@ -59,7 +65,7 @@
             <section class="startups">
                 <div class="container">
                     <div class="text align-items-center col-sm-8">
-                        <h3 class="title-proyect">Proyectos</h3> 
+                        <h3 class="js-title title-proyect">Startups</h3> 
                         <div class="inside-container accordion" id="accordionExample">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingOne">
@@ -67,12 +73,12 @@
                                         <figure>
                                             <img class="findpet" src="./images/findpet-logo.png" alt="findpet-logo">
                                         </figure>
-                                        <h5>Findpet - GPS para perros y gatos</h5>   
+                                        <h5 class="js-title-findpet">Findpet - Pets GPS tracker</h5>   
                                     </button>
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <p><a href="https://findpet.com.co"><strong>Findpet</strong></a> es un app para monitorear a tu mascota en tiempo real, nace por la alta presencia de mascotas en los hogares alrededor del mundo, esto asociado a que los millennials no quieren ser padres y optan por mascotas. Los casos de pérdida de mascotas es proporcional al crecimiento de este mercado y FindPet GPS cubre esta necesidad.</p>  
+                                        <div><a href="https://findpet.com.co"><strong>Findpet</strong></a><p class="js-findpet startup-paragraph"> is an tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.</p></div>
                                     </div>
                                 </div>
                             </div>
