added muvo startup translation

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <div><a href="https://findpet.com.co"><strong>Findpet</strong></a><p class="js-findpet startup-paragraph"> is an tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.</p></div>
+                                        <a href="https://findpet.com.co"><strong>Findpet</strong></a><p class="js-findpet startup-paragraph"> is an tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.</p>
                                     </div>
                                 </div>
                             </div>
@@ -88,12 +88,12 @@
                                         <figure>
                                             <img class="muvo" src="./images/muvo-logo.png" alt="muvo-logo">
                                         </figure>
-                                        <h5>MUVO - Bicicletas eléctricas compartidas</h5>
+                                        <h5 class="js-title-muvo">MUVO - e-bike sharing</h5>
                                     </button>
                                 </h2>
                                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <p><a href="https://muvo.bike"><strong>MUVO</strong></a> es un app para el alquiler de bicicletas eléctricas, la opción perfecta para movilizar a las personas evitando el tráfico, reduciendo emisiones de CO2 y sin sudar, o ¿quién quiere llegar sudando al trabajo?. La startup empieza en el auge mundial de la micromovilidad y con precios muy competitivos.</p>
+                                    <a href="https://muvo.bike"><strong>MUVO</strong></a><p class="js-muvo startup-paragraph"> is an rent bikes app, a perfect option to movilize persons avoiding cars traffic, also reducing CO2 emission and without sweat, or ¿who want arrive swaeting to work?. The startup begin operations into mundial micromovility boom.</p>
                                 </div>
                                 </div>
                             </div>
