added mimegafono startup traduction

--- a/index.html
+++ b/index.html
@@ -68,6 +68,21 @@
                         <h3 class="js-title title-proyect">Startups</h3> 
                         <div class="inside-container accordion" id="accordionExample">
                             <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                        <figure>
+                                            <img class="mimegafono" src="./images/mi-megafono-logo.png" alt="mimegafono-logo">
+                                        </figure>
+                                        <h5 class="js-title-mimegafono">Mi megáfono - Mass media advertisement</h5>
+                                    </button>
+                                </h2>
+                                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                         <a href="https://mimegafono.com"><strong>Mi Megáfono</strong></a><p class="js-mimegafono startup-paragraph"> is a media tech to democratize mass media advertisement, with three simple steps to create ad campaing and get to thousands persons, withuot delay and low cost.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingOne">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                         <figure>
@@ -79,36 +94,6 @@
                                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
                                         <a href="https://findpet.com.co"><strong>Findpet</strong></a><p class="js-findpet startup-paragraph"> is an tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header" id="headingTwo">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        <figure>
-                                            <img class="muvo" src="./images/muvo-logo.png" alt="muvo-logo">
-                                        </figure>
-                                        <h5 class="js-title-muvo">MUVO - e-bike sharing</h5>
-                                    </button>
-                                </h2>
-                                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <a href="https://muvo.bike"><strong>MUVO</strong></a><p class="js-muvo startup-paragraph"> is an rent bikes app, a perfect option to movilize persons avoiding cars traffic, also reducing CO2 emission and without sweat, or ¿who want arrive swaeting to work?. The startup begin operations into mundial micromovility boom.</p>
-                                </div>
-                                </div>
-                            </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header" id="headingThree">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                        <figure>
-                                            <img class="mimegafono" src="./images/mi-megafono-logo.png" alt="mimegafono-logo">
-                                        </figure>
-                                        <h5>Mi Megáfono - Pautas en medios tradicionales</h5>
-                                    </button>
-                                </h2>
-                                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                                    <div class="accordion-body">
-                                         <p><a href="https://mimegafono.com"><strong>Mi Megáfono</strong></a> es una media tech que democratiza la pauta en medios tradicionales, tres sencillos pasos para crear una campaña publicitaria y llegar a miles de personas, sin intermediarios, sin demoras y a bajo costo.</p>
                                     </div>
                                 </div>
                             </div>
@@ -125,6 +110,21 @@
                                     <div class="accordion-body">
                                          <p><a href="https://www.instagram.com/21ssgaming/"><strong>21SSGaming</strong></a> es una startup que impulsa los deportes e-Sports y apoya el talento Gaming Latinoamericano, se encarga de la creación de torneos y búsqueda de buenos jugadores para participación y representación en torneos nacionales e internacionales.</p>
                                     </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingTwo">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        <figure>
+                                            <img class="muvo" src="./images/muvo-logo.png" alt="muvo-logo">
+                                        </figure>
+                                        <h5 class="js-title-muvo">MUVO - e-bike sharing</h5>
+                                    </button>
+                                </h2>
+                                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <a href="https://muvo.bike"><strong>MUVO</strong></a><p class="js-muvo startup-paragraph"> is an rent bikes app, a perfect option to movilize persons avoiding cars traffic, also reducing CO2 emission and without sweat, or ¿who want arrive swaeting to work?. The startup begin operations into mundial micromovility boom.</p>
+                                </div>
                                 </div>
                             </div>
                         </div>
