--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 balance is fundamental part for understand society and build country. I believe that tech is escencial 
                                 to reduce big mundial social gap and allows a major economics growth.</p>
                             <p class="js-start-us">I believe that the human is integral when know to share their knowledge and experiences to build big ideas. 
-                                I think so success is build by us and always is important begin or ¿Who will do it?, I believe that be propositive, 
+                                I think so success is build by us and always is important begin or ¿who will do it?, I believe that be propositive, 
                                 restless and disciplined is the key to let ignorance and gain knowledge.</p>
                             <p class="js-software">The software solutions changed world and connects markets of unimaginable ways, the value of software development 
                                 is dream with big ideas while your materialize them to code lines.</p>
