added 21ss gaming startup translation

--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
                                         <figure>
                                             <img class="ssgaming" src="./images/21ssgaming-logo.png" alt=" 21ssgaming-logo">
                                         </figure>
-                                        <h5>21SSGaming - Torneos y equipo gaming</h5>
+                                        <h5 class="js-title-21ss">21SSGaming - Tournaments and gaming team</h5>
                                     </button>
                                 </h2>
                                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                         <p><a href="https://www.instagram.com/21ssgaming/"><strong>21SSGaming</strong></a> es una startup que impulsa los deportes e-Sports y apoya el talento Gaming Latinoamericano, se encarga de la creación de torneos y búsqueda de buenos jugadores para participación y representación en torneos nacionales e internacionales.</p>
+                                         <a href="https://www.instagram.com/21ssgaming/"><strong>21SSGaming</strong></a><p class="js-21ss startup-paragraph"> is a e-sports startup supporting the latin america talent, it create tournaments and hunt good players to national and international tournaments participation and representation.</p>
                                     </div>
                                 </div>
                             </div>
@@ -123,7 +123,7 @@
                                 </h2>
                                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <a href="https://muvo.bike"><strong>MUVO</strong></a><p class="js-muvo startup-paragraph"> is an rent bikes app, a perfect option to movilize persons avoiding cars traffic, also reducing CO2 emission and without sweat, or ¿who want arrive swaeting to work?. The startup begin operations into mundial micromovility boom.</p>
+                                    <a href="https://muvo.bike"><strong>MUVO</strong></a><p class="js-muvo startup-paragraph"> is an rent bikes app, perfect option to movilize persons avoiding cars traffic, also reducing CO2 emission and without sweat, or ¿who want arrive swaeting to work?. The startup begin operations into mundial micromovility boom.</p>
                                 </div>
                                 </div>
                             </div>
