--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                 </h2>
                                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                         <a href="https://mimegafono.com"><strong>Mi Megáfono</strong></a><p class="js-mimegafono startup-paragraph"> is a media tech to democratize mass media advertisement, with three simple steps to create ad campaing and get to thousands persons, withuot delay and low cost.</p>
+                                         <a href="https://mimegafono.com"><strong>Mi Megáfono</strong></a><p class="js-mimegafono inline-paragraph"> is a media tech to democratize mass media advertisement, with three simple steps to create ad campaing and get to thousands persons, withuot delay and low cost.</p>
                                     </div>
                                 </div>
                             </div>
@@ -93,7 +93,7 @@
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <a href="https://findpet.com.co"><strong>Findpet</strong></a><p class="js-findpet startup-paragraph"> is an tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.</p>
+                                        <a href="https://findpet.com.co"><strong>Findpet</strong></a><p class="js-findpet inline-paragraph"> is an tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.</p>
                                     </div>
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
                                 </h2>
                                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                         <a href="https://www.instagram.com/21ssgaming/"><strong>21SSGaming</strong></a><p class="js-21ss startup-paragraph"> is a e-sports startup supporting the latin america talent, it create tournaments and hunt good players to national and international tournaments participation and representation.</p>
+                                         <a href="https://www.instagram.com/21ssgaming/"><strong>21SSGaming</strong></a><p class="js-21ss inline-paragraph"> is a e-sports startup supporting the latin america talent, it create tournaments and hunt good players to national and international tournaments participation and representation.</p>
                                     </div>
                                 </div>
                             </div>
@@ -123,7 +123,7 @@
                                 </h2>
                                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <a href="https://muvo.bike"><strong>MUVO</strong></a><p class="js-muvo startup-paragraph"> is an rent bikes app, perfect option to movilize persons avoiding cars traffic, also reducing CO2 emission and without sweat, or ¿who want arrive swaeting to work?. The startup begin operations into mundial micromovility boom.</p>
+                                    <a href="https://muvo.bike"><strong>MUVO</strong></a><p class="js-muvo inline-paragraph"> is an rent bikes app, perfect option to movilize persons avoiding cars traffic, also reducing CO2 emission and without sweat, or ¿who want arrive swaeting to work?. The startup begin operations into mundial micromovility boom.</p>
                                 </div>
                                 </div>
                             </div>
@@ -147,7 +147,7 @@
                                         <figure>
                                             <img class="logo" src="./images/books-icon.png" alt="books-icon">
                                         </figure>
-                                        <h5>Libros</h5>
+                                        <h5 class="js-books">Books</h5>
                                     </a>
                                 </div>
                                 <div class="carousel-item">
@@ -155,7 +155,7 @@
                                         <figure>
                                             <img class="logo" src="./images/places-icon.png" alt="places-icon">
                                         </figure>
-                                        <h5>Lugares</h5>
+                                        <h5 class="js-places">Places</h5>
                                     </a>
                                 </div>
                                 <div class="carousel-item">
@@ -194,7 +194,7 @@
         </div>
         <div class="blue-rectangle">
             <footer> 
-                <h6>Creado por Santiago Soto</h6>
+                <h6 class="js-created inline-paragraph">Created by</h6><h6 class="inline-paragraph">Santiago Soto</h6>
             </footer>
         </div>
     </body>
