--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <title>Santiago Soto Montenegro</title>
     </head>
     <body>
-        <a class="js-english" href="#" onclick="setLanguage('en')">English</a>
-        <a class="js-spanish" href="#" onclick="setLanguage('es')">Spanish</a>
+        <div class="parent-container form-check form-switch">
+            <input class="form-check-input inline-paragraph" name="js-form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="swith-lang form-check-label" for="flexSwitchCheckDefault"><figure class="figure-col"><img class="flag-col" src="images/col-flag.png"></figure> Spanish</label>
+        </div>
         <div class="blue-line"></div>
         <div class="blue-rectangle"></div>
         <div class="parent-container">
@@ -46,7 +48,7 @@
                                 balance is fundamental part for understand society and build country. I believe that tech is escencial 
                                 to reduce big mundial social gap and allows a major economics growth.</p>
                             <p class="js-start-us">I believe that the human is integral when know to share their knowledge and experiences to build big ideas. 
-                                I think so success is build by us and always is important begin or ¿who will do it?, I believe that be propositive, 
+                                I think so success is build by us and always is important begin now or ¿who will do it?, I believe that be propositive, 
                                 restless and disciplined is the key to let ignorance and gain knowledge.</p>
                             <p class="js-software">The software solutions changed world and connects markets of unimaginable ways, the value of software development 
                                 is dream with big ideas while your materialize them to code lines.</p>
