fixed: translation tweaks

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
                     <div class="article-center col-sm-8">
                         <article>
                             <p class="js-intro">I'm Santiago, tech and human thought appassionate, I believe that rational and emotional
-                                balance is fundamental part for understand society and build country. I believe that tech is escencial 
-                                to reduce big mundial social gap and allows a major economics growth.</p>
-                            <p class="js-start-us">I believe that the human is integral when know to share their knowledge and experiences to build big ideas. 
-                                I think so success is build by us and always is important begin now or ¿who will do it?, I believe that be propositive, 
+                                balance is fundamental to understand society and build country. I believe that tech is escencial 
+                                to reduce big mundial social gap and allows better economics growth.</p>
+                            <p class="js-start-us">I believe that humans is integral when knows to share their knowledge and experiences to build big ideas. 
+                                I think so success is built by us and always is important begin now or ¿who will do it?, I believe that be propositive, 
                                 restless and disciplined is the key to let ignorance and gain knowledge.</p>
-                            <p class="js-software">The software solutions changed world and connects markets of unimaginable ways, the value of software development 
+                            <p class="js-software">The software solutions change the world and connects markets of unimaginable ways, software development value 
                                 is dream with big ideas while your materialize them to code lines.</p>
-                            <p class="js-startups">I have participated to startups building since zero developmenting bussiness strategies and building good teams. 
-                                I work to be expendable, I shared tools and my team will go further than I imagine.</p>
-                            <p class="js-motivation">My motivation is share experiences, materialize proyects and generate value to all around people to me.</p>
+                            <p class="js-startups">I have participated to startups building since zero developing bussiness strategies and building good teams. 
+                                I work to be expendable, I share tools and my team will go further than I imagine.</p>
+                            <p class="js-motivation">Share experiences is my motivation, materialize projects and generate value to all around people to me.</p>
                         </article>
                     </div>
                     <div class="photo-right col-sm-4">
@@ -95,7 +95,7 @@
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <a href="https://findpet.com.co"><strong>Findpet</strong></a><p class="js-findpet inline-paragraph"> is an tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.</p>
+                                        <a href="https://findpet.com.co"><strong>Findpet</strong></a><p class="js-findpet inline-paragraph"> is a tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.</p>
                                     </div>
                                 </div>
                             </div>
@@ -110,7 +110,7 @@
                                 </h2>
                                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                         <a href="https://www.instagram.com/21ssgaming/"><strong>21SSGaming</strong></a><p class="js-21ss inline-paragraph"> is a e-sports startup supporting the latin america talent, it create tournaments and hunt good players to national and international tournaments participation and representation.</p>
+                                         <a href="https://www.instagram.com/21ssgaming/"><strong>21SSGaming</strong></a><p class="js-21ss inline-paragraph"> is an e-sports startup supporting the latin america talent, it create tournaments and hunt good players to national and international tournaments participation and representation.</p>
                                     </div>
                                 </div>
                             </div>
@@ -125,7 +125,7 @@
                                 </h2>
                                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <a href="https://muvo.bike"><strong>MUVO</strong></a><p class="js-muvo inline-paragraph"> is an rent bikes app, perfect option to movilize persons avoiding cars traffic, also reducing CO2 emission and without sweat, or ¿who want arrive swaeting to work?. The startup begin operations into mundial micromovility boom.</p>
+                                    <a href="https://muvo.bike"><strong>MUVO</strong></a><p class="js-muvo inline-paragraph"> is a rent bikes app, perfect option to movilize persons avoiding cars traffic, also reducing CO2 emission and without sweat, or ¿who want arrive swaeting to work?. The startup begin operations into mundial micromobility boom.</p>
                                 </div>
                                 </div>
                             </div>
@@ -133,7 +133,7 @@
                     </div>
                 </div>
             </section>
-            <section class="proyects">
+            <section class="projects">
                 <div class="container">
                     <div class="text align-items-center col-sm-8">
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
