--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                                 restless and disciplined is the key to let ignorance and gain knowledge.</p>
                             <p class="js-software">The software solutions change the world and connects markets of unimaginable ways, software development value 
                                 is dream with big ideas while your materialize them to code lines.</p>
-                            <p class="js-startups">I have participated to startups building since zero developing bussiness strategies and building good teams. 
+                            <p class="js-startups">I have participated to startups building from zero developing bussiness strategies and building good teams. 
                                 I work to be expendable, I share tools and my team will go further than I imagine.</p>
-                            <p class="js-motivation">Share experiences is my motivation, materialize projects and generate value to all around people to me.</p>
+                            <p class="js-motivation">Sharing experiences is my motivation, materializing projects and generating value to all around people to me.</p>
                         </article>
                     </div>
                     <div class="photo-right col-sm-4">
