--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="article-center col-sm-8">
                         <article>
-                            <p class="js-intro">I'm Santiago, tech and human thought appassionate, I believe that rational and emotional
+                            <p class="js-intro">I'm Santiago, tech and human thought passionate, I believe that rational and emotional
                                 balance is fundamental to understand society and build country. I believe that tech is escencial 
                                 to reduce big mundial social gap and allows better economics growth.</p>
                             <p class="js-start-us">I believe that humans is integral when knows to share their knowledge and experiences to build big ideas. 
