added ozon info updated summary data

--- a/index.html
+++ b/index.html
@@ -44,17 +44,11 @@
                     </div>
                     <div class="article-center col-sm-8">
                         <article>
-                            <p class="js-intro">I'm Santiago, tech and human thought passionate, I believe that rational and emotional
-                                balance is fundamental to understand society and build country. I believe that tech is escencial 
-                                to reduce big mundial social gap and allows better economics growth.</p>
-                            <p class="js-start-us">I believe that humans is integral when knows to share their knowledge and experiences to build big ideas. 
-                                I think so success is built by us and always is important begin now or ¿who will do it?, I believe that be propositive, 
-                                restless and disciplined is the key to let ignorance and gain knowledge.</p>
-                            <p class="js-software">The software solutions change the world and connects markets of unimaginable ways, software development value 
-                                is dream with big ideas while your materialize them to code lines.</p>
-                            <p class="js-startups">I have participated to startups building from zero developing bussiness strategies and building good teams. 
-                                I work to be expendable, I share tools and my team will go further than I imagine.</p>
-                            <p class="js-motivation">Sharing experiences is my motivation, materializing projects and generating value to all around people to me.</p>
+                            <p class="js-intro">I'm Santiago, tech and human thought passionate.</p>
+                            <p class="js-start-us">I think that success is built as a team but the first step is always doing it myself.</p>
+                            <p class="js-software">I believe AI makes us humans with superpowers and it is our duty to create super solutions.</p>
+                            <p class="js-startups">I'm fan of startups, explosive growth and curious people.</p>
+                            <p class="js-motivation">Learning from the best and then sharing it with others is my way of contributing to the growth of everyone.</p>
                         </article>
                     </div>
                     <div class="photo-right col-sm-4">
@@ -69,6 +63,21 @@
                     <div class="text align-items-center col-sm-8">
                         <h3 class="js-title title-proyect">Startups</h3> 
                         <div class="inside-container accordion" id="accordionExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingFive">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                        <figure>
+                                            <img class="ozon" src="./images/ozon-logo.jpeg" alt="ozon-logo">
+                                        </figure>
+                                        <h5 class="js-title-ozon">Ozon.mobi - Bikes financing</h5>
+                                    </button>
+                                </h2>
+                                <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                         <a href="https://ozon.mobi"><strong>Ozon</strong></a><p class="js-ozon inline-paragraph"> is a fintech that finances bikes for unbanked people, does not check credit history and allows you to acquire their first loan in less than two days.</p>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingThree">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -196,7 +205,7 @@
         </div>
         <div class="blue-rectangle">
             <footer> 
-                <h6 class="js-created inline-paragraph">Created by</h6><h6 class="inline-paragraph">Santiago Soto</h6>
+                <h6 class="js-created inline-paragraph">Created by </h6><h6 class="inline-paragraph">Santiago Soto</h6>
             </footer>
         </div>
     </body>
