--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 </h2>
                                 <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                         <a href="https://ozon.mobi"><strong>Ozon</strong></a><p class="js-ozon inline-paragraph"> is a fintech that finances bikes for unbanked people, does not check credit history and allows you to acquire their first loan in less than two days.</p>
+                                         <a href="https://ozon.mobi" target="_blank"><strong>Ozon</strong></a><p class="js-ozon inline-paragraph"> is a fintech that finances bikes for unbanked people, does not check credit history and allows you to acquire their first loan in less than two days.</p>
                                     </div>
                                 </div>
                             </div>
@@ -89,7 +89,7 @@
                                 </h2>
                                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                         <a href="https://mimegafono.com"><strong>Mi Megáfono</strong></a><p class="js-mimegafono inline-paragraph"> is a media tech to democratize mass media advertisement, with three simple steps to create ad campaing and get to thousands persons, withuot delay and low cost.</p>
+                                         <a href="https://mimegafono.com" target="_blank"><strong>Mi Megáfono</strong></a><p class="js-mimegafono inline-paragraph"> is a media tech to democratize mass media advertisement, with three simple steps to create ad campaing and get to thousands persons, withuot delay and low cost.</p>
                                     </div>
                                 </div>
                             </div>
@@ -104,7 +104,7 @@
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <a href="https://findpet.com.co"><strong>Findpet</strong></a><p class="js-findpet inline-paragraph"> is a tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.</p>
+                                        <a href="https://findpet.com.co" target="_blank"><strong>Findpet</strong></a><p class="js-findpet inline-paragraph"> is a tracker app to pets in real time, the great pets growth in the homes around of the world increases GPS demand, also millennials prefer pets instead be fathers. The lost pets is a mundial problem and FindPet GPS cover this necessity.</p>
                                     </div>
                                 </div>
                             </div>
@@ -119,7 +119,7 @@
                                 </h2>
                                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                         <a href="https://www.instagram.com/21ssgaming/"><strong>21SSGaming</strong></a><p class="js-21ss inline-paragraph"> is an e-sports startup supporting the latin america talent, it create tournaments and hunt good players to national and international tournaments participation and representation.</p>
+                                         <a href="https://www.instagram.com/21ssgaming/" target="_blank"><strong>21SSGaming</strong></a><p class="js-21ss inline-paragraph"> is an e-sports startup supporting the latin america talent, it create tournaments and hunt good players to national and international tournaments participation and representation.</p>
                                     </div>
                                 </div>
                             </div>
@@ -134,7 +134,7 @@
                                 </h2>
                                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <a href="https://muvo.bike"><strong>MUVO</strong></a><p class="js-muvo inline-paragraph"> is a rent bikes app, perfect option to movilize persons avoiding cars traffic, also reducing CO2 emission and without sweat, or ¿who want arrive swaeting to work?. The startup begin operations into mundial micromobility boom.</p>
+                                    <a href="https://muvo.bike" target="_blank"><strong>MUVO</strong></a><p class="js-muvo inline-paragraph"> is a rent bikes app, perfect option to movilize persons avoiding cars traffic, also reducing CO2 emission and without sweat, or ¿who want arrive swaeting to work?. The startup begin operations into mundial micromobility boom.</p>
                                 </div>
                                 </div>
                             </div>
@@ -154,7 +154,7 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <a href="https://www.goodreads.com/sansotmon">
+                                    <a href="https://www.goodreads.com/sansotmon" target="_blank">
                                         <figure>
                                             <img class="logo" src="./images/books-icon.png" alt="books-icon">
                                         </figure>
@@ -162,7 +162,7 @@
                                     </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <a href="https://www.google.com/maps/d/u/0/viewer?mid=1D7My7O8oU54zkWRuIfgJE8t7yGFU6cNt">
+                                    <a href="https://www.google.com/maps/d/u/0/viewer?mid=1D7My7O8oU54zkWRuIfgJE8t7yGFU6cNt" target="_blank">
                                         <figure>
                                             <img class="logo" src="./images/places-icon.png" alt="places-icon">
                                         </figure>
@@ -170,7 +170,7 @@
                                     </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <a href="https://www.facebook.com/sotonativo">
+                                    <a href="https://www.facebook.com/sotonativo" target="_blank">
                                         <figure>
                                             <img class="logo" src="./images/gamer-icon.png" alt="gamer-icon">
                                         </figure>
@@ -178,7 +178,7 @@
                                     </a>
                                 </div>
                                 <div class="carousel-item">
-                                    <a href="https://es.tradingview.com/u/sansotmon/">
+                                    <a href="https://es.tradingview.com/u/sansotmon/" target="_blank">
                                         <figure>
                                             <img class="logo" src="./images/graph-icon.png" alt="trading-logo">
                                         </figure>
@@ -198,8 +198,8 @@
                     </div>                    
                 </div>
                 <div class="external-links" >
-                    <a href="https://www.linkedin.com/in/sansotmon"  <i class="fa fa-2x fa-linkedin-square"></i></a>
-                    <a href="https://www.github.com/sansotmon" <i class="fa-2x fab fa-github-square"></i></a>
+                    <a href="https://www.linkedin.com/in/sansotmon" target="_blank" <i class="fa fa-2x fa-linkedin-square"></i></a>
+                    <a href="https://www.github.com/sansotmon" target="_blank" <i class="fa-2x fab fa-github-square"></i></a>
                 </div>
             </section>
         </div>
