changed about english description

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                     </div>
                     <div class="article-center col-sm-8">
                         <article>
-                            <p class="js-intro">I'm Santiago, tech and human thought passionate.</p>
-                            <p class="js-start-us">I think that success is built as a team but the first step is always doing it myself.</p>
-                            <p class="js-software">I believe AI makes us humans with superpowers and it is our duty to create super solutions.</p>
-                            <p class="js-startups">I'm fan of startups, explosive growth and curious people.</p>
-                            <p class="js-motivation">Learning from the best and then sharing it with others is my way of contributing to the growth of everyone.</p>
+                            <p class="js-intro">I'm Santiago, passionate about technology and human thought.</p>
+                            <p class="js-start-us">I believe that success is a team effort, but it always starts with individual initiative.</p>
+                            <p class="js-software">I think AI gives us superhuman capabilities, and it's our responsibility to create extraordinary solutions.</p>
+                            <p class="js-startups">I'm a fan of startups, explosive growth, and curious minds.</p>
+                            <p class="js-motivation">My way of contributing to collective growth is by learning from the best and sharing that knowledge with others.</p>
                         </article>
                     </div>
                     <div class="photo-right col-sm-4">
